# mathmetics-for-ml

./: pyproject.toml
notebooks/linear-algebra/: exercises.ipynb  notes.ipynb
