[tool.poetry]
name = "mathematics-for-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
sympy = "^1.13.3"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.0"
seaborn = "^0.13.2"
plotly = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
